Remove perm size from scripted tests